impls/monero.dart/lib/src/generated_bindings_wownero.g.dart


  late final _WOWNERO_TransactionInfo_timestampPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_TransactionInfo_timestamp');
  late final _WOWNERO_TransactionInfo_timestamp =
      _WOWNERO_TransactionInfo_timestampPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> WOWNERO_TransactionInfo_paymentId(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _WOWNERO_TransactionInfo_paymentId(
      txInfo_ptr,
    );
  }

  late final _WOWNERO_TransactionInfo_paymentIdPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_TransactionInfo_paymentId');
  late final _WOWNERO_TransactionInfo_paymentId =
      _WOWNERO_TransactionInfo_paymentIdPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int WOWNERO_TransactionInfo_transfers_count(
    ffi.Pointer<ffi.Void> txInfo_ptr,
  ) {
    return _WOWNERO_TransactionInfo_transfers_count(
      txInfo_ptr,
    );
  }

  late final _WOWNERO_TransactionInfo_transfers_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_TransactionInfo_transfers_count');
  late final _WOWNERO_TransactionInfo_transfers_count =
      _WOWNERO_TransactionInfo_transfers_countPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int WOWNERO_TransactionInfo_transfers_amount(
    ffi.Pointer<ffi.Void> txInfo_ptr,
    int index,
  ) {
    return _WOWNERO_TransactionInfo_transfers_amount(
      txInfo_ptr,
      index,
    );
  }

  late final _WOWNERO_TransactionInfo_transfers_amountPtr = _lookup<
          ffi
          .NativeFunction<ffi.Uint64 Function(ffi.Pointer<ffi.Void>, ffi.Int)>>(
      'WOWNERO_TransactionInfo_transfers_amount');
  late final _WOWNERO_TransactionInfo_transfers_amount =
      _WOWNERO_TransactionInfo_transfers_amountPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>, int)>();

  ffi.Pointer<ffi.Char> WOWNERO_TransactionInfo_transfers_address(
    ffi.Pointer<ffi.Void> txInfo_ptr,
    int address,
  ) {
    return _WOWNERO_TransactionInfo_transfers_address(
      txInfo_ptr,
      address,
    );
  }

  late final _WOWNERO_TransactionInfo_transfers_addressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('WOWNERO_TransactionInfo_transfers_address');
  late final _WOWNERO_TransactionInfo_transfers_address =
      _WOWNERO_TransactionInfo_transfers_addressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>, int)>();

  int WOWNERO_TransactionHistory_count(
    ffi.Pointer<ffi.Void> txHistory_ptr,
  ) {
    return _WOWNERO_TransactionHistory_count(
      txHistory_ptr,
    );
  }

  late final _WOWNERO_TransactionHistory_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_TransactionHistory_count');
  late final _WOWNERO_TransactionHistory_count =
      _WOWNERO_TransactionHistory_countPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> WOWNERO_TransactionHistory_transaction(
    ffi.Pointer<ffi.Void> txHistory_ptr,
    int index,
  ) {
    return _WOWNERO_TransactionHistory_transaction(
      txHistory_ptr,
      index,
    );
  }

  late final _WOWNERO_TransactionHistory_transactionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('WOWNERO_TransactionHistory_transaction');
  late final _WOWNERO_TransactionHistory_transaction =
      _WOWNERO_TransactionHistory_transactionPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  ffi.Pointer<ffi.Void> WOWNERO_TransactionHistory_transactionById(
    ffi.Pointer<ffi.Void> txHistory_ptr,
    ffi.Pointer<ffi.Char> id,
  ) {
    return _WOWNERO_TransactionHistory_transactionById(
      txHistory_ptr,
      id,
    );
  }

  late final _WOWNERO_TransactionHistory_transactionByIdPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<ffi.Void> Function(
                  ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>>(
      'WOWNERO_TransactionHistory_transactionById');
  late final _WOWNERO_TransactionHistory_transactionById =
      _WOWNERO_TransactionHistory_transactionByIdPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(
              ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  void WOWNERO_TransactionHistory_refresh(
    ffi.Pointer<ffi.Void> txHistory_ptr,
  ) {
    return _WOWNERO_TransactionHistory_refresh(
      txHistory_ptr,
    );
  }

  late final _WOWNERO_TransactionHistory_refreshPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_TransactionHistory_refresh');
  late final _WOWNERO_TransactionHistory_refresh =
      _WOWNERO_TransactionHistory_refreshPtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>)>();

  void WOWNERO_TransactionHistory_setTxNote(
    ffi.Pointer<ffi.Void> txHistory_ptr,
    ffi.Pointer<ffi.Char> txid,
    ffi.Pointer<ffi.Char> note,
  ) {
    return _WOWNERO_TransactionHistory_setTxNote(
      txHistory_ptr,
      txid,
      note,
    );
  }

  late final _WOWNERO_TransactionHistory_setTxNotePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('WOWNERO_TransactionHistory_setTxNote');
  late final _WOWNERO_TransactionHistory_setTxNote =
      _WOWNERO_TransactionHistory_setTxNotePtr.asFunction<
          void Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<ffi.Char> WOWNERO_AddressBookRow_extra(
    ffi.Pointer<ffi.Void> addressBookRow_ptr,
  ) {
    return _WOWNERO_AddressBookRow_extra(
      addressBookRow_ptr,
    );
  }

  late final _WOWNERO_AddressBookRow_extraPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_AddressBookRow_extra');
  late final _WOWNERO_AddressBookRow_extra = _WOWNERO_AddressBookRow_extraPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> WOWNERO_AddressBookRow_getAddress(
    ffi.Pointer<ffi.Void> addressBookRow_ptr,
  ) {
    return _WOWNERO_AddressBookRow_getAddress(
      addressBookRow_ptr,
    );
  }

  late final _WOWNERO_AddressBookRow_getAddressPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_AddressBookRow_getAddress');
  late final _WOWNERO_AddressBookRow_getAddress =
      _WOWNERO_AddressBookRow_getAddressPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> WOWNERO_AddressBookRow_getDescription(
    ffi.Pointer<ffi.Void> addressBookRow_ptr,
  ) {
    return _WOWNERO_AddressBookRow_getDescription(
      addressBookRow_ptr,
    );
  }

  late final _WOWNERO_AddressBookRow_getDescriptionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_AddressBookRow_getDescription');
  late final _WOWNERO_AddressBookRow_getDescription =
      _WOWNERO_AddressBookRow_getDescriptionPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Char> WOWNERO_AddressBookRow_getPaymentId(
    ffi.Pointer<ffi.Void> addressBookRow_ptr,
  ) {
    return _WOWNERO_AddressBookRow_getPaymentId(
      addressBookRow_ptr,
    );
  }

  late final _WOWNERO_AddressBookRow_getPaymentIdPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<ffi.Void>)>>('WOWNERO_AddressBookRow_getPaymentId');
  late final _WOWNERO_AddressBookRow_getPaymentId =
      _WOWNERO_AddressBookRow_getPaymentIdPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Void>)>();

  int WOWNERO_AddressBookRow_getRowId(
    ffi.Pointer<ffi.Void> addressBookRow_ptr,
  ) {
    return _WOWNERO_AddressBookRow_getRowId(
      addressBookRow_ptr,
    );
  }

  late final _WOWNERO_AddressBookRow_getRowIdPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_AddressBookRow_getRowId');
  late final _WOWNERO_AddressBookRow_getRowId =
      _WOWNERO_AddressBookRow_getRowIdPtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  int WOWNERO_AddressBook_getAll_size(
    ffi.Pointer<ffi.Void> addressBook_ptr,
  ) {
    return _WOWNERO_AddressBook_getAll_size(
      addressBook_ptr,
    );
  }

  late final _WOWNERO_AddressBook_getAll_sizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Void>)>>(
          'WOWNERO_AddressBook_getAll_size');
  late final _WOWNERO_AddressBook_getAll_size =
      _WOWNERO_AddressBook_getAll_sizePtr.asFunction<
          int Function(ffi.Pointer<ffi.Void>)>();

  ffi.Pointer<ffi.Void> WOWNERO_AddressBook_getAll_byIndex(
    ffi.Pointer<ffi.Void> addressBook_ptr,
    int index,
  ) {
    return _WOWNERO_AddressBook_getAll_byIndex(
      addressBook_ptr,
      index,
    );
  }

  late final _WOWNERO_AddressBook_getAll_byIndexPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>,
              ffi.Int)>>('WOWNERO_AddressBook_getAll_byIndex');
  late final _WOWNERO_AddressBook_getAll_byIndex =
      _WOWNERO_AddressBook_getAll_byIndexPtr.asFunction<
          ffi.Pointer<ffi.Void> Function(ffi.Pointer<ffi.Void>, int)>();

  bool WOWNERO_AddressBook_addRow(
    ffi.Pointer<ffi.Void> addressBook_ptr,
    ffi.Pointer<ffi.Char> dst_addr,
    ffi.Pointer<ffi.Char> payment_id,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _WOWNERO_AddressBook_addRow(
      addressBook_ptr,
      dst_addr,
      payment_id,
      description,
    );
  }

  late final _WOWNERO_AddressBook_addRowPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('WOWNERO_AddressBook_addRow');
  late final _WOWNERO_AddressBook_addRow =
      _WOWNERO_AddressBook_addRowPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  bool WOWNERO_AddressBook_deleteRow(
    ffi.Pointer<ffi.Void> addressBook_ptr,
    int rowId,
  ) {
    return _WOWNERO_AddressBook_deleteRow(
      addressBook_ptr,
      rowId,
    );
  }

  late final _WOWNERO_AddressBook_deleteRowPtr = _lookup<
          ffi
          .NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Void>, ffi.Size)>>(
      'WOWNERO_AddressBook_deleteRow');
  late final _WOWNERO_AddressBook_deleteRow = _WOWNERO_AddressBook_deleteRowPtr
      .asFunction<bool Function(ffi.Pointer<ffi.Void>, int)>();

  bool WOWNERO_AddressBook_setDescription(
    ffi.Pointer<ffi.Void> addressBook_ptr,
    int rowId,
    ffi.Pointer<ffi.Char> description,
  ) {
    return _WOWNERO_AddressBook_setDescription(
      addressBook_ptr,
      rowId,
      description,
    );
  }

  late final _WOWNERO_AddressBook_setDescriptionPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<ffi.Void>, ffi.Size,
              ffi.Pointer<ffi.Char>)>>('WOWNERO_AddressBook_setDescription');
  late final _WOWNERO_AddressBook_setDescription =
      _WOWNERO_AddressBook_setDescriptionPtr.asFunction<
          bool Function(ffi.Pointer<ffi.Void>, int, ffi.Pointer<ffi.Char>)>();

  void WOWNERO_AddressBook_refresh(
    ffi.Pointer<ffi.Void> addressBook_ptr,
  ) {
    return _WOWNERO_AddressBook_refresh(
      addressBook_ptr,
    );
  }
